--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,11 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
 
 [env]
 platform = espressif32@6.6.0
+; platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 board_build.partitions = large_spiffs_16MB.csv
+; board_build.filesystem = littlefs
 board_build.filesystem = spiffs
 board_build.arduino.memory_type = qio_opi
 board_upload.flash_size = 16MB
@@ -28,10 +21,30 @@ build_flags =
 	-DLV_LVGL_H_INCLUDE_SIMPLE
 	-I src
 	-L lib/ESP32_JPEG/src/esp32s3
-	-llibesp_codec.a
+    -llibesp_codec.a
+; lib_deps =
+; https://github.com/esp-arduino-libs/ESP32_JPEG
 
 [platformio]
-default_envs = 42_demo_ui_lcd
+; default_envs = 01_display_esp_expnader   ; 使用esp_IOexpnader库驱动扩展芯片 
+; default_envs = 02_display_XL95x5_LTR303    ; 使用XL95x5库驱动扩展芯片 
+; default_envs = 10_Lgfx_usage             ; 使用Lgfx库驱动点亮屏幕 
+; default_envs = 11_TFTeSPI_usage          ; 使用TFTeSPI库驱动点亮屏幕
+; default_envs = 12_Arduino_gfx            ; 使用Arduino_gfx库驱动点亮屏幕
+; default_envs = 20_button                 ; 按键使用案例，查看串口输出
+; default_envs = 21_aht20                  ; 温湿度使用案例
+; default_envs = 22_SC207aH                ; 加速度传感器测试，查看串口输出
+; default_envs = 23_music_test             ; 音频输出基本测试,播放网络音乐
+; default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
+; default_envs = 31_png_browser            ; 基于LVGL的图片浏览器
+; default_envs = 32_DEMO_MJPEG             ; 基于LVGL视频播放器演示
+default_envs = 33_lvgl_deepSeek             ; 基于LVGL视频播放器演示
+; default_envs = 40_Snake_Game             ; 按键使用案例
+; default_envs = 41_Snake_Game2            ; 使用IO按键使用案例
+; default_envs = 42_demo_ui_lcd            ; 基于LVGL的图形界面设计
+; default_envs = 43_RTOS_face              ; 基于LVGL的mp3播放器
+; default_envs = 44_mp3Player2             ; 基于LVGL的mp3播放器
+
 src_dir = examples/${platformio.default_envs}
 
 [env:01_display_esp_expnader]
@@ -46,9 +59,13 @@ src_dir = examples/${platformio.default_envs}
 [env:30_lvgl_Gif]
 [env:31_png_browser]
 [env:32_DEMO_MJPEG]
+[env:33_lvgl_deepSeek]
 [env:40_Snake_Game]
 [env:41_Snake_Game2]
 [env:42_demo_ui_lcd]
 [env:43_RTOS_face]
 [env:44_mp3Player2]
+
+
+
 
