--- a/platformio.ini
+++ b/platformio.ini
@@ -38,10 +38,10 @@ build_flags =
 ; default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
 ; default_envs = 31_png_browser            ; 基于LVGL的图片浏览器
 ; default_envs = 32_DEMO_MJPEG             ; 基于LVGL视频播放器演示
-default_envs = 33_lvgl_deepSeek             ; 基于LVGL视频播放器演示
+; default_envs = 33_lvgl_deepSeek             ; 基于LVGL视频播放器演示
 ; default_envs = 40_Snake_Game             ; 按键使用案例
 ; default_envs = 41_Snake_Game2            ; 使用IO按键使用案例
-; default_envs = 42_demo_ui_lcd            ; 基于LVGL的图形界面设计
+default_envs = 42_demo_ui_lcd            ; 基于LVGL的图形界面设计
 ; default_envs = 43_RTOS_face              ; 基于LVGL的mp3播放器
 ; default_envs = 44_mp3Player2             ; 基于LVGL的mp3播放器
 
