--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,8 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DLV_LVGL_H_INCLUDE_SIMPLE
 	-I src
-	-L lib/ESP32_JPEG/src/esp32s3
-    -llibesp_codec.a
+; 	-L lib/ESP32_JPEG/src/esp32s3
+;     -llibesp_codec.a
 ; lib_deps =
 ; https://github.com/esp-arduino-libs/ESP32_JPEG
 
@@ -38,6 +38,7 @@ build_flags =
 ; default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
 ; default_envs = 31_png_browser            ; 基于LVGL的图片浏览器
 ; default_envs = 32_DEMO_MJPEG             ; 基于LVGL视频播放器演示
+
 ; default_envs = 33_lvgl_deepSeek             ; 基于LVGL视频播放器演示
 ; default_envs = 40_Snake_Game             ; 按键使用案例
 ; default_envs = 41_Snake_Game2            ; 使用IO按键使用案例
@@ -59,6 +60,11 @@ src_dir = examples/${platformio.default_envs}
 [env:30_lvgl_Gif]
 [env:31_png_browser]
 [env:32_DEMO_MJPEG]
+build_flags =
+	-L lib/ESP32_JPEG/src/esp32s3
+    -llibesp_codec.a
+lib_deps =
+https://github.com/esp-arduino-libs/ESP32_JPEG
 [env:33_lvgl_deepSeek]
 [env:40_Snake_Game]
 [env:41_Snake_Game2]
