--- a/platformio.ini
+++ b/platformio.ini
@@ -61,7 +61,7 @@ src_dir = examples/${platformio.default_envs}
 [env:31_png_browser]
 [env:32_DEMO_MJPEG]
 build_flags =
-	-L lib/ESP32_JPEG/src/esp32s3
+	-L lib/ESP32_JPEG/src/esp32s3  ;need to put the "ESP32_JPEG" libaray  to lib folder manually. https://github.com/esp-arduino-libs/ESP32_JPEG
     -llibesp_codec.a
 lib_deps =
 https://github.com/esp-arduino-libs/ESP32_JPEG
