--- a/platformio.ini
+++ b/platformio.ini
@@ -20,13 +20,8 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DLV_LVGL_H_INCLUDE_SIMPLE
 	-I src
-; 	-L lib/ESP32_JPEG/src/esp32s3
-;     -llibesp_codec.a
-; lib_deps =
-; https://github.com/esp-arduino-libs/ESP32_JPEG
-
 [platformio]
-; default_envs = 01_display_esp_expnader   ; 使用esp_IOexpnader库驱动扩展芯片 
+default_envs = 01_display_esp_expnader   ; 使用esp_IOexpnader库驱动扩展芯片 
 ; default_envs = 02_display_XL95x5_LTR303    ; 使用XL95x5库驱动扩展芯片 
 ; default_envs = 10_Lgfx_usage             ; 使用Lgfx库驱动点亮屏幕 
 ; default_envs = 11_TFTeSPI_usage          ; 使用TFTeSPI库驱动点亮屏幕
@@ -38,11 +33,9 @@ build_flags =
 ; default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
 ; default_envs = 31_png_browser            ; 基于LVGL的图片浏览器
 ; default_envs = 32_DEMO_MJPEG             ; 基于LVGL视频播放器演示
-
-; default_envs = 33_lvgl_deepSeek             ; 基于LVGL视频播放器演示
 ; default_envs = 40_Snake_Game             ; 按键使用案例
 ; default_envs = 41_Snake_Game2            ; 使用IO按键使用案例
-default_envs = 42_demo_ui_lcd            ; 基于LVGL的图形界面设计
+; default_envs = 42_demo_ui_lcd            ; 基于LVGL的图形界面设计
 ; default_envs = 43_RTOS_face              ; 基于LVGL的mp3播放器
 ; default_envs = 44_mp3Player2             ; 基于LVGL的mp3播放器
 
