--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ build_flags =
 	-I src
 [platformio]
 ; default_envs = 01_display_esp_expnader   ; 使用esp_IOexpnader库驱动扩展芯片 
-default_envs = 02_display_XL95x5_LTR303    ; 使用XL95x5库驱动扩展芯片 
+; default_envs = 02_display_XL95x5_LTR303    ; 使用XL95x5库驱动扩展芯片 
 ; default_envs = 10_Lgfx_usage             ; 使用Lgfx库驱动点亮屏幕 
 ; default_envs = 11_TFTeSPI_usage          ; 使用TFTeSPI库驱动点亮屏幕
 ; default_envs = 12_Arduino_gfx            ; 使用Arduino_gfx库驱动点亮屏幕
@@ -30,7 +30,7 @@ default_envs = 02_display_XL95x5_LTR303    ; 使用XL95x5库驱动扩展芯片
 ; default_envs = 21_aht20                  ; 温湿度使用案例
 ; default_envs = 22_SC207aH                ; 加速度传感器测试，查看串口输出
 ; default_envs = 23_music_test             ; 音频输出基本测试,播放网络音乐
-; default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
+default_envs = 30_lvgl_Gif               ; LVGL驱动并播放澎湃开机gif动图
 ; default_envs = 31_png_browser            ; 基于LVGL的图片浏览器
 ; default_envs = 32_DEMO_MJPEG             ; 基于LVGL视频播放器演示
 ; default_envs = 40_Snake_Game             ; 按键使用案例
