添加 DF_K10 按钮内容

--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=fyx0730
 sentence=K10 button control
 paragraph=K10 button control
 category=Communication
-url=https://github.com/fyx0730/DF_K10.git
+url=https://github.com/fyx0730/DF_K10
 architectures=*
